	Add some constants for VDI
	Rename vst_effects-constants from xx to TXT_xx

------------------------------- Patchlevel 35 -------------------------------

gemfast.h
	Increased VDI arrays 
	Definition of STATE15 was wrong

aesrc.c
	Add array_to_grect()

aesbind.h
	Remove __OLD_BIND__ for evnt_multi()

magxbind.h
magxfnts.c	
magxform.c
magxfslx.c
magxpdlg.c
	A new lib which contains the MagiC-only AES calls

mt_*
	Removed from gemlib because I don't have mind to support a lib that 
	anybody needs. Or is there someone who need it??

gemfast.h
	Change type and rename a component of AESPB and VDIPB
	Rename _aes/_vdiparms to aes/vdi_parms

Makefile
	Split into Makefile, Makefile.gem and Makefile.magx

aesbind.h
aesshel.c
	Add shel_rdef() and shel_wdef()	(MagiC, N.AES)

------------------------------- Patchlevel 36 -------------------------------

aesappl.c
	Wrong binding at appl_search()

magxpdlg.c
	pdlg_save_default_settings() added

gemfast.h
	Remove ALT_MFDB
	Remove ORECT, VRECT and Rect

----------------
	Restructured the whole lib:

	- Remove the AES/VDI_CONTROL_ENCODE because this method don't work
	  for in/out counters higher than 255!
	- Add new trap-functions aes(AESPB *pb) and vdi(VDIPB *pb)
	- Clean-up the whole VDI part of the lib.
	- Add full NVDI support (versions 2, 3, 4 and 5)
	- Split the lib into two parts:
		gem.olb   the core AES/VDI functions, supported by TOS, MultiTOS 
				  and N.AES.
		gemx.olb  all extensions of NVDI, FSM/Speedo-GDOS, MagiC, WDIALOG
	- Create new headers, one for each lib: gem.h and xgem.h
	  Don't panic - there is a backward-compatibility for aesbind.h/ 
	  vdibind.h/gemfast.h :-)
	
------------------------------- Patchlevel 37 -------------------------------

x_fnts.c
	Misc wrong bindings fixed.

v_inquire.c
	Wrong binding for vq_color() fixed.

gem.h
	OLD_MNSET removed
	struct bfobspec renamed to BFOBSPEC
	struct Mouse renamed to MOUSE

------------------------------- Patchlevel 38 -------------------------------